[package]
name = "rust-python-tree-distances"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_python_tree_distances"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "rust-python-tree-distances"
path = "src/main.rs"
required-features = []

[dependencies]
phylotree="0.1.3"
pyo3 = { version = "0.27.1", features = ["extension-module"], optional = true }
rayon = "1"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
itertools = "0.14.0"

[features]
default = []
python = ["pyo3"]
