[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-python-tree-distances"
version = "0.1.0"
description = "Fast tree distance calculations (Robinson-Foulds, Weighted RF, Kuhner-Felsenstein) for phylogenetic trees"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["phylogenetics", "tree-distance", "robinson-foulds", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/Joon-Klaps/rust-python-tree-distances"
Repository = "https://github.com/Joon-Klaps/rust-python-tree-distances"

[tool.maturin]
features = ["python"]
module-name = "rust_python_tree_distances"
